--- a/weathermap.html
+++ b/weathermap.html
@@ -13,7 +13,7 @@
     <meta name="theme-color" content="#ffffff">
 
     <!-- MapBOx utilis -->
-    <link href='https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.css' rel='stylesheet' />
+    <link href='https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.css' rel='stylesheet'/>
 
     <!-- BootStrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -225,18 +225,47 @@
 
 
 
-
 <script>
     $(document).ready(function () {
 
         "use strict";
 
         mapboxgl.accessToken = mapboxtoken;
-        var map = new mapboxgl.Map({
+        const map = new mapboxgl.Map({
             container: 'map',
-            style: 'mapbox://styles/mapbox/streets-v9',
+            // maxZoom: 5.99,
+            // minZoom: 4,
             zoom: 10,
-            center: [-98.4916, 29.4252]})
+            center: [-98.4916, 29.4252],
+            style: 'mapbox://styles/mapbox/dark-v10'
+        });
+
+        map.on('load', () => {
+            map.addSource('radar', {
+                'type': 'image',
+                'url': 'https://docs.mapbox.com/mapbox-gl-js/assets/radar.gif',
+                'coordinates': [
+                    [-80.425, 46.437],
+                    [-71.516, 46.437],
+                    [-71.516, 37.936],
+                    [-80.425, 37.936]
+                ]
+            });
+            map.addLayer({
+                id: 'radar-layer',
+                'type': 'raster',
+                'source': 'radar',
+                'paint': {
+                    'raster-fade-duration': 0
+                }
+            });
+        });
+
+        // var map = new mapboxgl.Map({
+        //     container: 'map',
+        //     style: 'mapbox://styles/mapbox/streets-v9',
+        //     zoom: 10,
+        //     center: [-98.4916, 29.4252]})
 
 
 
@@ -358,13 +387,6 @@
         }
 
     </script>
-
-
-
-<!--- MapBox CDN --->
-
-
-<link href='https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.css' rel='stylesheet' />
 
 
 
