--- a/home.html
+++ b/home.html
@@ -284,6 +284,24 @@
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
+                ## clock
+                <script>
+                    function startTime(){
+                        const today = new Date();
+                        let h = today.getHours();
+                        let m = today.getMinutes();
+                        let s = today.getSeconds();
+                        m = checkTime(m);
+                        s = checkTime(s);
+                        document.getElementById('clock').innerText = h+":"+m+":"+s;
+                        setTimeout(startTime,1000);
+                    }
+                    function checkTime(i){
+                        if(i < 10) {i = "0" + i}; //add zero in front of numbers < 10
+                        return i;
+                    }
 
+                </script>
+            </div>
 </body>
 </html>
