--- a/calc.html
+++ b/calc.html
@@ -117,6 +117,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="aboutme.html">about me</a>
                 </li>
+                <li>
+                    <a class="nav-link" id="clock" style="color:#00b1ae">01:20am</a>
+                </li>
             </ul>
 
 
@@ -397,7 +400,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
 
-## clock
+<!--## clock-->
 <script>
     function startTime(){
         const today = new Date();
