--- a/index.html
+++ b/index.html
@@ -32,8 +32,6 @@
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 
-
-
     <!--    //favcon-->
     <link rel="icon" type="image/png" sizes="16x16" href="https://live.staticflickr.com/65535/51320697245_9708355788_c.jpg">
 </head>
@@ -94,6 +92,7 @@
 
     <h1 class="h3 mb-3 font-weight-normal"><b>hello, it's me timothy</b> </h1>
     <p style=""><b>this is my github pages</b></p>
+
     <p style="color:#474545">I'm interested in almost everything science and I LOVE TO BUILD and CREATE</p>
 <!--    <a style="color:#474545" style="color:#474545">HTML is where I go to remember why I love to program</a>-->
 <!--    <a style="color:#474545">My latest awesome adventure was uploading a hello world in C++ to an Ardiuno, Soldered to a  </a>-->
@@ -142,6 +141,9 @@
 
     <div style="max-width: 300px; margin-left:20%; margin-right:20%; align-items: center">
         <a href="https://github.com/timlefkowitz" class="btn btn-lg btn-block" style="background:linear-gradient(to right, #9e69ba, #b700fc); color:antiquewhite" role="button" aria-pressed="true">github</a>
+
+            <a class="nav-link" id="clock" style="color:#384949">01:20am</a>
+
 
     </div>
 
@@ -251,7 +253,7 @@
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
-## clock
+<!--## clock-->
 <script>
     function startTime(){
         const today = new Date();
