--- a/weathermap.html
+++ b/weathermap.html
@@ -369,7 +369,7 @@
 
 </script>
 
-    ## clock
+<!--    ## clock-->
     <script>
         function startTime(){
             const today = new Date();
