--- a/flickarchive.html
+++ b/flickarchive.html
@@ -129,6 +129,10 @@
                 <li class="nav-item">
                     <a class="nav-link" href="aboutme.html">about me</a>
                 </li>
+                <li>
+                    <a class="nav-link" id="clock" style="color:#00b1ae">01:20am</a>
+                </li>
+
             </ul>
 
 
@@ -306,7 +310,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-## clock
+<!--## clock-->
 <script>
     function startTime(){
         const today = new Date();
