--- a/home.html
+++ b/home.html
@@ -299,10 +299,12 @@
                         document.getElementById('clock').innerText = h+":"+m+":"+s;
                         setTimeout(startTime,1000);
                     }
+                    startTime();
                     function checkTime(i){
                         if(i < 10) {i = "0" + i}; //add zero in front of numbers < 10
                         return i;
                     }
+
 
                 </script>
             </div>
