--- a/3d.html
+++ b/3d.html
@@ -127,6 +127,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="aboutme.html">about me</a>
                 </li>
+                <li>
+                    <a class="nav-link" id="clock" style="color:#00b1ae">01:20am</a>
+                </li>
             </ul>
 
 
@@ -280,5 +283,29 @@
 
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+
+<!--## clock-->
+<script>
+    function startTime(){
+        const today = new Date();
+        let h = today.getHours();
+        let m = today.getMinutes();
+        let s = today.getSeconds();
+        m = checkTime(m);
+        s = checkTime(s);
+        document.getElementById('clock').innerText = h+":"+m+":"+s;
+        setTimeout(startTime,1000);
+    }
+    startTime()
+    function checkTime(i){
+        if(i < 10) {i = "0" + i}; //add zero in front of numbers < 10
+        return i;
+    }
+
+</script>
+
+
+
 </body>
 </html>
