--- a/home.html
+++ b/home.html
@@ -227,11 +227,147 @@
                     </a>
                     <h1>Timothy Lefkowitz</h1>
                     <a style="color:#737373;" >developer/artist from texas</a><p></p>
-                    <a style="color:#737373;" href="/">photonlabs.xyz</a><br>
-                    <a style="color:#737373;" href="Tim/contact">resume / cv</a>
+<!--                    <a style="color:#737373;" href="/">photonlabs.xyz</a><br>-->
+<!--                    <a style="color:#737373;" href="Tim/contact">resume / cv</a>-->
                 </div>
 
 
+
+                <ul class="cards">
+                    <li class="cards__item">
+                        <div class="card">
+                            <div class="card__image card__image--river"></div>
+                            <div class="card__content">
+                                <div class="card__title">Flex Grow</div>
+                                <p class="card__text">This defines the ability for a flex item to grow if necessary. It accepts a unitless value that serves as a proportion. It dictates what amount of the available space inside the flex container the item should take up.</p>
+                                <button class="btn btn--block card__btn">Button</button>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+
+                <style>
+
+                    *,
+                    *::before,
+                    *::after {
+                        box-sizing: border-box;
+                    }
+
+                    html {
+                        background-color: #f0f0f0;
+                    }
+
+                    body {
+                        color: @gray;
+                        font-family: 'Roboto','Helvetica Neue', Helvetica, Arial, sans-serif;
+                        font-style: normal;
+                        font-weight: 400;
+                        letter-spacing: 0;
+                        /*padding: 1rem;*/
+                        text-rendering: optimizeLegibility;
+                        -webkit-font-smoothing: antialiased;
+                        -moz-osx-font-smoothing: grayscale;
+                        -moz-font-feature-settings: "liga" on;
+                    }
+
+                    img {
+                        height: auto;
+                        max-width: 100%;
+                        vertical-align: middle;
+                    }
+
+                    .btn {
+                        background-color: white;
+                        border: 1px solid @gray-light;
+                    //border-radius: 1rem;
+                        color: @gray-dark;
+                        padding: 0.5rem;
+                        text-transform: lowercase;
+                    }
+
+                    .btn--block {
+                        display: block;
+                        width: 100%;
+                    }
+
+                    .cards {
+                        display: flex;
+                        flex-wrap: wrap;
+                        list-style: none;
+                        margin: 0;
+                        padding: 0;
+                    }
+
+                    .cards__item {
+                        display: flex;
+                        padding: 1rem;
+
+                    }
+
+                    .card {
+                        background-color: rgba(65, 61, 61, 0.3);
+                        border-radius: 0.25rem;
+                        box-shadow: 0 20px 40px -14px rgba(0,0,0,0.25);
+                        display: flex;
+                        flex-direction: column;
+                        overflow: hidden;
+                    }
+
+
+                    .card__content {
+                        display: flex;
+                        flex: 1 1 auto;
+                        flex-direction: column;
+                        padding: 1rem;
+                    }
+
+                    .card__image {
+                        background-position: center center;
+                        background-repeat: no-repeat;
+                        background-size: cover;
+                        border-top-left-radius: 0.25rem;
+                        border-top-right-radius: 0.25rem;
+                        filter: contrast(70%);
+                    //filter: saturate(180%);
+                        overflow: hidden;
+                        position: relative;
+                        transition: filter 0.5s cubic-bezier(.43,.41,.22,.91);
+                    }
+
+                    .card__image--flowers {
+                        background-image: url(https://unsplash.it/800/600?image=82);
+                    }
+
+                    .card__image--river {
+                        background-image: url(https://unsplash.it/800/600?image=11);
+                    }
+
+                    .card__image--record {
+                        background-image: url(https://unsplash.it/800/600?image=39);
+                    }
+
+                    .card__image--fence {
+                        background-image: url(https://unsplash.it/800/600?image=59);
+                    }
+
+                    .card__title {
+                        color: blue;
+                        font-size: 1.25rem;
+                        font-weight: 300;
+                        letter-spacing: 2px;
+                        text-transform: uppercase;
+                    }
+
+                    .card__text {
+                        flex: 1 1 auto;
+                        font-size: 0.875rem;
+                        line-height: 1.5;
+                        margin-bottom: 1.25rem;
+                    }
+
+
+                </style>
 
 
 <!--              <a>I'm always working on some complicated things, Some of my ideas include: encrypting every post, giving it a key and letting that key only exist once. A new post then becomes a token </a>-->
@@ -287,7 +423,7 @@
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
-                ## clock
+<!--                ## clock-->
                 <script>
                     function startTime(){
                         const today = new Date();
