--- a/aboutme.html
+++ b/aboutme.html
@@ -216,7 +216,7 @@
 
                 <!--          Avatar and Add to Contacts Buttons-->
                 <div style="margin-bottom:1.8vh">
-                    <a href="javascript:;" class="avatar rounded-circle">
+                    <a href="home.html" class="avatar rounded-circle">
                         <img class="avatar" src="img/me1.jpeg" style="height: 20vh; width: 20vh;">
                     </a>
                     <h2>Hi, I'm Timothy Craig Lefkowitz</h2>
