--- a/home.html
+++ b/home.html
@@ -220,13 +220,14 @@
         <div class="row postingDiv" style="display: flex; justify-content: center; align-items: center; text-align: center">
             <div id="profileItems" style="margin-top:10vh">
 
+
                 <!--          Avatar and Add to Contacts Buttons-->
                 <div style="margin-bottom:1.8vh">
                     <a href="javascript:;" class="avatar rounded-circle">
-                        <img class="avatar" th:src="${user.imgPath}" style="height: 20vh; width: 20vh;">
+                        <img class="avatar" src="https://live.staticflickr.com/65535/51372494246_27f10fbeec_o.gif" style="height: 20vh; width: 20vh;">
                     </a>
                     <h1>Timothy Lefkowitz</h1>
-                    <a style="color:#737373;" >developer/artist from texas</a><p></p>
+                    <a style="color:#737373;"> developer / artist / geek</a><p></p>
 <!--                    <a style="color:#737373;" href="/">photonlabs.xyz</a><br>-->
 <!--                    <a style="color:#737373;" href="Tim/contact">resume / cv</a>-->
                 </div>
@@ -238,9 +239,47 @@
                         <div class="card">
                             <div class="card__image card__image--river"></div>
                             <div class="card__content">
-                                <div class="card__title">Flex Grow</div>
-                                <p class="card__text">This defines the ability for a flex item to grow if necessary. It accepts a unitless value that serves as a proportion. It dictates what amount of the available space inside the flex container the item should take up.</p>
-                                <button class="btn btn--block card__btn">Button</button>
+                                <div class="card__title">Photonlabs - <h6>Social Media Platform</h6> </div>
+                                <p class="card__text">Photonlabs is a Social Media Platform made for my capstone project for Codeup.
+                                    This application includes Users, Friends and Groups. Users can create post, groups and edit their profile.</p>
+                                <a href="https://github.com/timlefkowitz/photonlabs" class="btn btn--block card__btn">code</a>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="cards__item">
+                        <div class="card">
+                            <div class="card__image card__image--river"></div>
+                            <div class="card__content">
+                                <div class="card__title">Photonlabs - <h6>Calculator</h6> </div>
+                                <p class="card__text">Photonlabs is a Social Media Platform made for my capstone project for Codeup.
+                                    This application includes Users, Friends and Groups. Users can create post, groups and edit their profile.</p>
+                                <a class="btn btn--block card__btn" href="calc.html">Calculate</a>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="cards__item">
+                        <div class="card">
+                            <div class="card__image card__image--river"></div>
+                            <div class="card__content">
+                                <div class="card__title">My Weather Map </div>
+                                <p class="card__text">Using Mapbox API we brought in the weather for 3 days! today tomorrow and next!</p>
+                                <a class="btn btn--block card__btn" href="weathermap.html">Weather Map</a>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card__image card__image--river"></div>
+                            <div class="card__content">
+                                <div class="card__title">Photographic Archive</div>
+                                <p class="card__text">a camera has been with me for most of my life, here is the Archive of my work</p>
+                                <a class="btn btn--block card__btn" href="flickarchive.html">photographic archive</a>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card__image card__image--river"></div>
+                            <div class="card__content">
+                                <div class="card__title">Game Design</div>
+                                <p class="card__text">Game design is one of my favorite past times. I can't go too long without jumping in and working on design</p>
+                                <a class="btn btn--block card__btn" href="3d.html">3D worlds</a>
                             </div>
                         </div>
                     </li>
@@ -317,6 +356,7 @@
 
                     .card__content {
                         display: flex;
+
                         flex: 1 1 auto;
                         flex-direction: column;
                         padding: 1rem;
