--- a/home.html
+++ b/home.html
@@ -127,9 +127,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="aboutme.html">about me</a>
                 </li>
-                <li>
-                    <a class="nav-link" id="clock" style="color:#00b1ae">01:20am</a>
-                </li>
+
             </ul>
 
 
@@ -164,10 +162,10 @@
                     <li class="nav-item">
                         <a class="nav-link" href="blog.html" style="color:#00b1ae">blog</a>
                     </li>
+                    <li>
+                        <a class="nav-link" id="clock" style="color:#00b1ae">01:20am</a>
+                    </li>
                 </ul>
-
-
-
             </div>
         </div>
         <!-- Collapsible wrapper -->
@@ -227,7 +225,7 @@
                         <img class="avatar" src="https://live.staticflickr.com/65535/51372494246_27f10fbeec_o.gif" style="height: 20vh; width: 20vh;">
                     </a>
                     <h1>Timothy Lefkowitz</h1>
-                    <a style="color:#737373;"> developer / artist / geek</a><p></p>
+                    <a style="color:#737373;"> developer / artist / geek </a><p></p>
 <!--                    <a style="color:#737373;" href="/">photonlabs.xyz</a><br>-->
 <!--                    <a style="color:#737373;" href="Tim/contact">resume / cv</a>-->
                 </div>
@@ -239,7 +237,7 @@
                         <div class="card">
                             <div class="card__image card__image--river"></div>
                             <div class="card__content">
-                                <div class="card__title">Photonlabs - <h6>Social Media Platform</h6> </div>
+                                <div class="card__title"><b>Photonlabs - Social Media Platform</b></div>
                                 <p class="card__text">Photonlabs is a Social Media Platform made for my capstone project for Codeup.
                                     This application includes Users, Friends and Groups. Users can create post, groups and edit their profile.</p>
                                 <a href="https://github.com/timlefkowitz/photonlabs" class="btn btn--block card__btn">code</a>
@@ -250,7 +248,7 @@
                         <div class="card">
                             <div class="card__image card__image--river"></div>
                             <div class="card__content">
-                                <div class="card__title">Photonlabs - <h6>Calculator</h6> </div>
+                                <div class="card__title"><b>Photonlabs - Calculator</b></div>
                                 <p class="card__text">Photonlabs is a Social Media Platform made for my capstone project for Codeup.
                                     This application includes Users, Friends and Groups. Users can create post, groups and edit their profile.</p>
                                 <a class="btn btn--block card__btn" href="calc.html">Calculate</a>
@@ -261,7 +259,7 @@
                         <div class="card">
                             <div class="card__image card__image--river"></div>
                             <div class="card__content">
-                                <div class="card__title">My Weather Map </div>
+                                <div class="card__title"><b>My Weather Map</b></div>
                                 <p class="card__text">Using Mapbox API we brought in the weather for 3 days! today tomorrow and next!</p>
                                 <a class="btn btn--block card__btn" href="weathermap.html">Weather Map</a>
                             </div>
@@ -269,7 +267,7 @@
                         <div class="card">
                             <div class="card__image card__image--river"></div>
                             <div class="card__content">
-                                <div class="card__title">Photographic Archive</div>
+                                <div class="card__title"><b>Photographic Archive</b></div>
                                 <p class="card__text">a camera has been with me for most of my life, here is the Archive of my work</p>
                                 <a class="btn btn--block card__btn" href="flickarchive.html">photographic archive</a>
                             </div>
@@ -277,7 +275,7 @@
                         <div class="card">
                             <div class="card__image card__image--river"></div>
                             <div class="card__content">
-                                <div class="card__title">Game Design</div>
+                                <div class="card__title"><b>Game and Environmental</b></div>
                                 <p class="card__text">Game design is one of my favorite past times. I can't go too long without jumping in and working on design</p>
                                 <a class="btn btn--block card__btn" href="3d.html">3D worlds</a>
                             </div>
