--- a/aboutme.html
+++ b/aboutme.html
@@ -214,7 +214,10 @@
         <div class="row postingDiv" style="display: flex; justify-content: center; align-items: center; text-align: center">
             <div id="profileItems" style="margin-top:10vh">
 
-                <!--          Avatar and Add to Contacts Buttons-->
+
+
+
+                        <!--          Avatar and Add to Contacts Buttons-->
                 <div style="margin-bottom:1.8vh">
                     <a href="home.html" class="avatar rounded-circle">
                         <img class="avatar" src="img/me1.jpeg" style="height: 20vh; width: 20vh;">
@@ -223,10 +226,17 @@
                     <a style="color:#737373;" >programmer / 3d artist / photographer</a><p></p>
                     <a style="color:#f2511b;" href="https://docs.google.com/document/d/140qW3EW1QqKMFJNFM6-Gg_5R8FnCEOPk57uvXKiRM3E/edit?usp=sharing"> Resume / CV </a>
                     <p></p>
-                    <p></p>
+
+                    <div class="card">
+                        <div class="card__image card__image--river"></div>
+                        <div class="card__content">
+
+
+
+                        <p></p>
                     <a>Creating and building is what I love to do. The locals know me as a photographer but when I'm not out with a camera, I'm in my studio working on computer sciences or experimenting with Music.</a>
-                    <p>life is a balance, I try to enjoy nature and get proper exercise</p>
-                    <p>My work enviorment is on Macintosh, I love Java and Springboot. I enjoy three dimentional modeling and pizza!</p>
+                            <p>life is balance</p>
+                    <p>My work enviorment is on Macintosh, I love Java and Springboot. I enjoy three dimentional modeling and pizza</p>
                 </div>
 
 <!--                <style>-->
@@ -237,6 +247,21 @@
 
 
                 </div>
+
+
+<!--                        <a class="btn btn&#45;&#45;block card__btn" href="3d.html">3D worlds</a>-->
+                    </div>
+                </div>
+                <style>
+                    .card {
+                        background-color: rgba(65, 61, 61, 0.3);
+                        border-radius: 0.25rem;
+                        box-shadow: 0 20px 40px -14px rgba(0,0,0,0.25);
+                        display: flex;
+                        flex-direction: column;
+                        overflow: hidden;
+                    }
+                </style>
 
 
 
